# gemini-hackathon

./: .dockerignore  .gitignore  APEX_APPROVE_STATE.md  Dockerfile  README.md  pyproject.toml  server.py
agent/: instrumentation.py  main.py
agent/approve_demo/: __init__.py  _test_subcall.py  agent.py  prompt.py
agent/approve_demo/tools/: check_employee_pattern.py  check_receipt_coherence.py  draft_clarification.py  review_past_decisions.py  verify_vendor.py
evals/: eval_reasoning.py  eval_routing.py  eval_tool_selection.py  run_evals.py
fixtures/: expenses.json  run_fixtures.py
google-cloud-sdk/: RELEASE_NOTES  VERSION
google-cloud-sdk/.install/: bq-nix.snapshot.json  bq.snapshot.json  bundled-python3-unix-linux-x86_64.manifest  bundled-python3-unix-linux-x86_64.snapshot.json  bundled-python3-unix.snapshot.json  core-nix.snapshot.json  core.manifest  core.snapshot.json  gcloud-crc32c-linux-x86_64.snapshot.json  gcloud-crc32c.snapshot.json  gcloud-deps-linux-x86_64.snapshot.json  gcloud-deps.snapshot.json  gcloud.snapshot.json  gsutil-nix.snapshot.json  gsutil.snapshot.json
google-cloud-sdk/lib/googlecloudsdk/api_lib/biglake/: util.py
google-cloud-sdk/lib/googlecloudsdk/api_lib/composer/: environments_util.py
google-cloud-sdk/lib/googlecloudsdk/api_lib/run/: ssh.py
google-cloud-sdk/lib/googlecloudsdk/core/: config.json  properties.py
google-cloud-sdk/lib/googlecloudsdk/generated_clients/: regen_apis_config.yaml
google-cloud-sdk/lib/surface/compute/: connect_to_serial_port.py
google-cloud-sdk/lib/surface/run/: deploy.py
(+146 files in other folders)
